整理代码 优化界面 加入登录 我的界面完成度百分之五十

--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -48,7 +48,7 @@
                 android:layout_marginTop="@dimen/text_margin_small"
                 android:lines="1"
                 android:singleLine="true"
-                android:textColor="@color/test2"
+                android:textColor="@color/tv_color_light"
                 android:textSize="13sp" />
 
         </LinearLayout>
