--- a/app/src/main/res/layout/item_me_playlist.xml
+++ b/app/src/main/res/layout/item_me_playlist.xml
@@ -10,9 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/default_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommended_playlist" />
+        android:text="@string/me_playlist" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlist_list"
@@ -22,21 +21,4 @@
         android:overScrollMode="never"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         tools:ignore="RtlSymmetry" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/default_margin"
-        android:background="?android:attr/dividerVertical" />
-
-    <TextView
-        style="@style/AppSmallTitleStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/default_margin"
-        android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommended_song" />
-
 </LinearLayout>
