--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="border_color">#FFEFEFEF</color>
+    <!--空图片背景-->
+    <color name="empty_iv_bg_color">#FFEFEFEF</color>
 
-    <color name="fragment_play_button_color">#323232</color>
+    <color name="fragment_play_widget_color">#323232</color>
 
-    <color name="test2">#7A7A7A</color>
+    <!--浅色字体颜色-->
+    <color name="tv_color_light">#7A7A7A</color>
     <color name="main">#006DCC</color>
     <color name="blue">#FF2A81D2</color>
 
-    <color name="edit_text_bg_color">#EEEEF0</color>
+    <color name="widget_bg_color_light">#EEEEF0</color>
 </resources>
