--- a/app/src/main/res/layout/item_toplist.xml
+++ b/app/src/main/res/layout/item_toplist.xml
@@ -6,18 +6,24 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        style="@style/ViewCardViewStyle"
-        android:layout_width="170dp"
-        android:layout_height="170dp">
+    <studio.mandysa.music.ui.view.SquareLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
 
-        <ImageView
-            android:id="@+id/toplist_cover"
+        <androidx.cardview.widget.CardView
+            style="@style/ViewCardViewStyle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:ignore="ContentDescription" />
+            android:layout_height="match_parent">
 
-    </androidx.cardview.widget.CardView>
+            <ImageView
+                android:id="@+id/toplist_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:ignore="ContentDescription" />
+
+        </androidx.cardview.widget.CardView>
+
+    </studio.mandysa.music.ui.view.SquareLayout>
 
     <TextView
         android:id="@+id/toplist_name"
@@ -26,6 +32,7 @@
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="2"
+        android:singleLine="true"
         android:text="@string/test"
         android:textColor="@android:color/black"
         android:textSize="12sp" />
