--- a/bottomnavigationbar/src/main/res/layout/item_horizontal.xml
+++ b/bottomnavigationbar/src/main/res/layout/item_horizontal.xml
@@ -1,33 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="match_parent"
     android:foreground="?android:attr/selectableItemBackgroundBorderless"
-    app:cardCornerRadius="6dp"
-    app:cardElevation="0dp">
+    android:gravity="center"
+    android:orientation="horizontal"
+    android:paddingHorizontal="4dp"
+    tools:ignore="UseCompoundDrawables">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/image1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingHorizontal="4dp"
-        tools:ignore="UseCompoundDrawables">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_android_black_24dp"
+        tools:ignore="ContentDescription" />
 
-        <ImageView
-            android:id="@+id/image1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_android_black_24dp"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:visibility="gone" />
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/text1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone" />
+</LinearLayout>
