--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -5,13 +5,13 @@
     style="@style/BgCardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/item_margin_small">
+    android:layout_margin="@dimen/activity_horizontal_margin">
 
     <LinearLayout
-        android:padding="@dimen/item_margin_small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/item_margin_small">
 
         <androidx.cardview.widget.CardView
             android:layout_width="80dp"
