--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,8 +40,10 @@
 
     <!--无边框dialog-->
     <style name="AppDialog">
-        <!-- 是否有边框 -->
-        <item name="android:windowFrame">@null</item>
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否模糊-->
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 
     <style name="AppFragmentAnimStyle">
