--- a/AndroidSlidingUpPanel/src/main/res/drawable/above_shadow.xml
+++ b/AndroidSlidingUpPanel/src/main/res/drawable/above_shadow.xml
@@ -3,6 +3,5 @@
     <gradient
         android:startColor="#20000000"
         android:endColor="@android:color/transparent"
-        android:angle="90.0" />
+        android:angle="90"></gradient>
 </shape>
-
