--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -5,7 +5,7 @@
     style="@style/BgCardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_horizontal_margin">
+    android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
