--- a/app/src/main/res/layout/item_playlist_head.xml
+++ b/app/src/main/res/layout/item_playlist_head.xml
@@ -9,7 +9,7 @@
         style="@style/AppSmallTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
         android:text="@string/recommended_playlist" />
@@ -27,15 +27,14 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginVertical="@dimen/default_margin"
         android:background="?android:attr/dividerVertical" />
 
     <TextView
         style="@style/AppSmallTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
         android:text="@string/recommended_song" />
 
