--- a/app/src/main/res/layout/item_playlist_info_head.xml
+++ b/app/src/main/res/layout/item_playlist_info_head.xml
@@ -50,8 +50,8 @@
             <TextView
                 android:id="@+id/todo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="bottom" />
+                android:layout_height="0dp"
+                android:layout_weight="1.0" />
         </LinearLayout>
 
     </LinearLayout>
