--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="35dp"
             app:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardElevation="3dp">
+            app:cardElevation="5dp">
 
             <studio.mandysa.music.ui.view.SquareLayout
                 android:layout_width="match_parent"
@@ -119,6 +119,40 @@
             android:duplicateParentState="true"
             android:progressTint="@color/fragment_play_widget_color"
             android:thumbTint="@color/fragment_play_widget_color" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="100dp"
+            android:layout_marginVertical="40dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/like"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:padding="8dp"
+                android:src="@drawable/ic_round_favorite_24"
+                android:tint="@color/tv_color_light"
+                tools:ignore="ContentDescription" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0" />
+
+            <ImageView
+                android:id="@+id/playing_list"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:padding="8dp"
+                android:src="@drawable/ic_round_format_list_bulleted_24"
+                android:tint="@color/tv_color_light"
+                tools:ignore="ContentDescription" />
+        </LinearLayout>
 
     </LinearLayout>
 
