--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,7 +14,7 @@
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
         android:layout_marginVertical="@dimen/text_margin_small"
         android:autofillHints="no"
-        android:drawableStart="@drawable/ic_search"
+        android:drawableStart="@drawable/ic_round_search_24"
         android:hint="@string/search_hint"
         android:imeOptions="actionSearch"
         android:inputType="text"
