--- a/app/src/main/res/layout/item_playlist_head.xml
+++ b/app/src/main/res/layout/item_playlist_head.xml
@@ -3,39 +3,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
     android:orientation="vertical">
 
     <TextView
         style="@style/AppSmallTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommended_playlist" />
+        android:text="@string/playlist" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/playlist_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:overScrollMode="never"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        tools:ignore="RtlSymmetry" />
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            style="@style/ImageCardViewStyle"
+            android:layout_width="110dp"
+            android:layout_height="110dp">
+
+            <ImageView
+                android:id="@+id/cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:foreground="?android:attr/selectableItemBackground"
+                tools:ignore="ContentDescription" />
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/playlist_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|start"
+                android:textColor="@color/fragment_play_widget_color"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/playlist_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/default_margin" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:layout_marginVertical="@dimen/default_margin"
         android:background="?android:attr/dividerVertical" />
-
-    <TextView
-        style="@style/AppSmallTitleStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommended_song" />
 
 </LinearLayout>
