--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,9 +56,9 @@
 
     <style name="DialogAnim" parent="android:Animation">
         <!--进入时的动画-->
-        <item name="android:windowEnterAnimation">@anim/window_enter_anim</item>
+        <item name="android:windowEnterAnimation">@anim/dialog_enter_anim</item>
         <!--退出时的动画-->
-        <item name="android:windowExitAnimation">@anim/window_exit_anim</item>
+        <item name="android:windowExitAnimation">@anim/dialog_exit_anim</item>
     </style>
 
     <style name="AppFragmentAnimStyle">
