--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,20 @@
     <!--空图片背景-->
     <color name="empty_iv_bg_color">#FFEFEFEF</color>
 
-    <color name="fragment_play_widget_color">#323232</color>
+    <!--播放列表标题-->
+    <color name="tv_color_title">#323232</color>
 
     <!--浅色字体颜色-->
     <color name="tv_color_light">#7A7A7A</color>
+
     <color name="main">#006DCC</color>
     <color name="blue">#FF2A81D2</color>
 
     <color name="widget_bg_color_light">#EEEEF0</color>
+
+    <!--半透明白色-->
+    <color name="translucent_white">#80FFFFFF</color>
+
+    <!--半透明灰色-->
+    <color name="translucent_black">#1A000000</color>
 </resources>
