优化PlayFragment 修复MandySaX的若干个bug和优化

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,18 +23,23 @@
             android:layout_height="match_parent">
 
             <fragment
-                android:id="@+id/controller_fragment"
-                android:name="studio.mandysa.music.ui.controller.ControllerFragment"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/nav_height"
-                tools:ignore="Instantiatable" />
-
-            <fragment
                 android:id="@+id/play_fragment"
                 android:name="studio.mandysa.music.ui.play.PlayFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha="0"
+                tools:ignore="Instantiatable" />
+
+            <FrameLayout
+                android:id="@+id/play_fragment_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white" />
+
+            <fragment
+                android:id="@+id/controller_fragment"
+                android:name="studio.mandysa.music.ui.controller.ControllerFragment"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/nav_height"
                 tools:ignore="Instantiatable" />
 
         </FrameLayout>
