--- a/app/src/main/res/layout/item_recommended_playlist.xml
+++ b/app/src/main/res/layout/item_recommended_playlist.xml
@@ -15,7 +15,7 @@
         android:text="@string/recommended_playlist" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/playlist_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
