--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <!--浅色字体颜色-->
     <color name="tv_color_light">#7A7A7A</color>
 
-    <color name="main">#006DCC</color>
+    <color name="main">#48c0a3</color>
     <color name="blue">#FF2A81D2</color>
 
     <color name="widget_bg_color_light">#EEEEF0</color>
