--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="ViewCardViewStyle">
         <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="cardElevation">0dp</item>
-        <item name="cardBackgroundColor">@null</item>
+        <item name="cardBackgroundColor">@android:color/transparent</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
     </style>
 
@@ -36,6 +36,10 @@
     <style name="AppButtonStyle">
         <item name="android:stateListAnimator">@null</item>
         <item name="android:background">@drawable/btn_selector</item>
+    </style>
+
+    <style name="ImageViewStyle">
+
     </style>
 
     <style name="TransparentDialog" parent="@android:style/Theme.Dialog">
