--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,68 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/ViewCardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="200dp"
-    android:orientation="vertical">
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    android:paddingHorizontal="@dimen/activity_horizontal_margin">
 
-    <LinearLayout
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:orientation="vertical">
+        android:layout_height="200dp"
+        android:src="@drawable/logo"
+        tools:ignore="ContentDescription" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/logo"
-            tools:ignore="ContentDescription" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/welcome"
+        android:textColor="@android:color/black"
+        android:textSize="23sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/welcome"
-            android:textColor="@android:color/black"
-            android:textSize="23sp"
-            android:textStyle="bold" />
+    <EditText
+        android:id="@+id/etPhone"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_edittext"
+        android:layout_marginTop="@dimen/item_margin_small"
+        android:autofillHints="phone"
+        android:background="@drawable/login_et_bg"
+        android:hint="@string/phone"
+        android:inputType="phone"
+        android:padding="10dp"
+        android:textCursorDrawable="@drawable/all_et_cursor_color" />
 
-        <EditText
-            android:id="@+id/etPhone"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_edittext"
-            android:layout_marginTop="@dimen/item_margin_small"
-            android:autofillHints="phone"
-            android:background="@drawable/login_et_bg"
-            android:hint="@string/phone"
-            android:inputType="phone"
-            android:padding="10dp"
-            android:textCursorDrawable="@drawable/all_et_cursor_color"
-            tools:ignore="TextContrastCheck" />
+    <EditText
+        android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_edittext"
+        android:layout_marginTop="@dimen/item_margin_small"
+        android:autofillHints="password"
+        android:background="@drawable/login_et_bg"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:padding="10dp"
+        android:textCursorDrawable="@drawable/all_et_cursor_color" />
 
-        <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_edittext"
-            android:layout_marginTop="@dimen/item_margin_small"
-            android:autofillHints="password"
-            android:background="@drawable/login_et_bg"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:textCursorDrawable="@drawable/all_et_cursor_color"
-            tools:ignore="TextContrastCheck" />
+    <Button
+        android:id="@+id/btn_login"
+        style="@style/AppButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/widget_height"
+        android:layout_marginTop="@dimen/item_margin_small"
+        android:text="@string/login" />
 
-        <Button
-            android:id="@+id/btn_login"
-            style="@style/AppButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/widget_height"
-            android:layout_marginTop="@dimen/item_margin_small"
-            android:text="@string/login"
-            tools:ignore="TextContrastCheck" />
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
