--- a/app/src/main/res/layout/item_my_playlist.xml
+++ b/app/src/main/res/layout/item_my_playlist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--个人界面歌单item-->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     style="@style/ViewCardViewStyle"
     android:layout_width="match_parent"
@@ -18,11 +17,11 @@
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:layout_marginVertical="@dimen/item_margin">
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/playlist_cover"
+                style="@style/ImageViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:ignore="ContentDescription" />
+                android:layout_height="match_parent" />
 
         </androidx.cardview.widget.CardView>
 
