--- a/app/src/main/res/layout/item_recommended_playlist.xml
+++ b/app/src/main/res/layout/item_recommended_playlist.xml
@@ -30,4 +30,12 @@
         android:layout_marginVertical="@dimen/default_margin"
         android:background="?android:attr/dividerVertical" />
 
+    <TextView
+        style="@style/AppSmallTitleStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/text_margin_small"
+        android:text="@string/recommended_song" />
+
 </LinearLayout>
