--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?><!--歌曲item-->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
     style="@style/ViewCardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -23,8 +21,7 @@
                 android:id="@+id/song_cover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:placeholderImage="@color/empty_iv_bg_color"
-                tools:ignore="ContentDescription" />
+                app:placeholderImage="@color/empty_iv_bg_color" />
 
         </androidx.cardview.widget.CardView>
 
