--- a/app/src/main/res/layout/item_toplist.xml
+++ b/app/src/main/res/layout/item_toplist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--排行榜item-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -15,11 +14,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/toplist_cover"
+                style="@style/ImageViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:ignore="ContentDescription" />
+                android:layout_height="match_parent" />
 
         </androidx.cardview.widget.CardView>
 
