--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,20 +21,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <fragment
+            <mandysax.fragment.FragmentView
                 android:id="@+id/play_fragment"
                 android:name="studio.mandysa.music.ui.play.PlayFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha="0"
-                tools:ignore="Instantiatable" />
+                android:alpha="0" />
 
-            <fragment
+            <mandysax.fragment.FragmentView
                 android:id="@+id/controller_fragment"
                 android:name="studio.mandysa.music.ui.controller.ControllerFragment"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/nav_height"
-                tools:ignore="Instantiatable" />
+                android:layout_height="@dimen/nav_height" />
 
         </FrameLayout>
 
