--- a/app/src/main/res/layout/item_toplists.xml
+++ b/app/src/main/res/layout/item_toplists.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -12,15 +11,15 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommended_playlist" />
+        android:text="@string/toplist" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/playlist_list"
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:overScrollMode="never"
-        tools:ignore="RtlSymmetry" />
+        android:paddingEnd="@dimen/activity_horizontal_margin" />
 
     <View
         android:layout_width="match_parent"
@@ -35,6 +34,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/text_margin_small"
-        android:text="@string/recommended_song" />
+        android:text="@string/recommended_newsong" />
 
 </LinearLayout>
