--- a/app/src/main/res/layout/item_user_head.xml
+++ b/app/src/main/res/layout/item_user_head.xml
@@ -11,7 +11,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:cardCornerRadius="50dp">
+        app:cardCornerRadius="50dp"
+        app:cardElevation="0dp">
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_avatar"
