--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,5 @@
     <dimen name="height_edittext">55dp</dimen>
 
     <dimen name="widget_height">55dp</dimen>
+    <dimen name="album_width">110dp</dimen>
 </resources>
