重新设计主页和搜索界面 着手优化xml命名 修复mandysax在特殊情况下fragment顺序错乱问题，导致‘子’比’父‘先恢复从而发生闪退

--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -16,12 +16,12 @@
         android:orientation="vertical">
 
         <mandysax.fragmentpage.widget.FragmentPage
-            android:id="@+id/fragment_page"
+            android:id="@+id/play_fragment_page"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.0" />
 
-        <studio.mandysa.bottomnavigationbar.BottomNavigationBar
+        <mandysax.tablayout.TabLayout
             android:id="@+id/bottomNavigationBar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/nav_height"
