--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_gravity="bottom"
         android:background="@android:color/white">
 
-        <studio.mandysa.bottomnavigationbar.BottomNavigationBar
+        <mandysax.tablayout.TabLayout
             android:id="@+id/bottomNavigationBar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/nav_height"
