--- a/app/src/main/res/layout/fragment_playing.xml
+++ b/app/src/main/res/layout/fragment_playing.xml
@@ -22,9 +22,9 @@
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/music_cover"
+                style="@style/ImageViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                style="@style/ImageViewStyle"/>
+                android:layout_height="match_parent" />
 
         </studio.mandysa.music.ui.view.SquareLayout>
 
